k8s/stream.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream-deployment
  labels:
    app: stream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stream
  template:
    metadata:
      labels:
        app: stream
    spec:
      containers:
        - name: stream
          image: rishad004/gv_stream:latest
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: stream-service
spec:
  selector:
    app: stream
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
