k8s/streamer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamer-deployment
  labels:
    app: streamer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamer
  template:
    metadata:
      labels:
        app: streamer
    spec:
      containers:
        - name: streamer
          image: rishad004/gv_streamer:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: streamer-service
spec:
  selector:
    app: streamer
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
